@@ -37,19 +37,19 @@ CONFIG_RSN_PREAUTH=y
 #CONFIG_RADIUS_SERVER=n
 
 # Integrated EAP authenticator
-CONFIG_EAP=y
+#CONFIG_EAP=y
 
 # EAP-MD5 for the integrated EAP authenticator
-CONFIG_EAP_MD5=y
+#CONFIG_EAP_MD5=y
 
 # EAP-TLS for the integrated EAP authenticator
-CONFIG_EAP_TLS=y
+#CONFIG_EAP_TLS=y
 
 # EAP-MSCHAPv2 for the integrated EAP authenticator
-CONFIG_EAP_MSCHAPV2=y
+#CONFIG_EAP_MSCHAPV2=y
 
 # EAP-PEAP for the integrated EAP authenticator
-CONFIG_EAP_PEAP=y
+#CONFIG_EAP_PEAP=y
 
 # EAP-GTC for the integrated EAP authenticator
 #CONFIG_EAP_GTC=y
