@@ -81,10 +81,11 @@ static struct eloop_data eloop;
 
 int eloop_init(void *user_data)
 {
-	memset(&eloop, 0, sizeof(eloop));
+	os_memset(&eloop, 0, sizeof(eloop));
 	eloop.user_data = user_data;
 	eloop.num_handles = 1;
-	eloop.handles = malloc(eloop.num_handles * sizeof(eloop.handles[0]));
+	eloop.handles = os_malloc(eloop.num_handles *
+				  sizeof(eloop.handles[0]));
 	if (eloop.handles == NULL)
 		return -1;
 
@@ -98,8 +99,8 @@ static int eloop_prepare_handles(void)
 
 	if (eloop.num_handles > eloop.reader_count + eloop.event_count + 8)
 		return 0;
-	n = realloc(eloop.handles,
-		    eloop.num_handles * 2 * sizeof(eloop.handles[0]));
+	n = os_realloc(eloop.handles,
+		       eloop.num_handles * 2 * sizeof(eloop.handles[0]));
 	if (n == NULL)
 		return -1;
 	eloop.handles = n;
@@ -128,9 +129,8 @@ int eloop_register_read_sock(int sock, eloop_sock_handler handler,
 		WSACloseEvent(event);
 		return -1;
 	}
-	tmp = (struct eloop_sock *)
-		realloc(eloop.readers,
-			(eloop.reader_count + 1) * sizeof(struct eloop_sock));
+	tmp = os_realloc(eloop.readers,
+			 (eloop.reader_count + 1) * sizeof(struct eloop_sock));
 	if (tmp == NULL) {
 		WSAEventSelect(sock, event, 0);
 		WSACloseEvent(event);
@@ -170,9 +170,9 @@ void eloop_unregister_read_sock(int sock)
 	WSACloseEvent(eloop.readers[i].event);
 
 	if (i != eloop.reader_count - 1) {
-		memmove(&eloop.readers[i], &eloop.readers[i + 1],
-			(eloop.reader_count - i - 1) *
-			sizeof(struct eloop_sock));
+		os_memmove(&eloop.readers[i], &eloop.readers[i + 1],
+			   (eloop.reader_count - i - 1) *
+			   sizeof(struct eloop_sock));
 	}
 	eloop.reader_count--;
 	eloop.reader_table_changed = 1;
@@ -192,10 +192,8 @@ int eloop_register_event(void *event, size_t event_size,
 	if (eloop_prepare_handles())
 		return -1;
 
-	tmp = (struct eloop_event *)
-		realloc(eloop.events,
-			(eloop.event_count + 1) *
-			sizeof(struct eloop_event));
+	tmp = os_realloc(eloop.events,
+			 (eloop.event_count + 1) * sizeof(struct eloop_event));
 	if (tmp == NULL)
 		return -1;
 
@@ -227,9 +225,9 @@ void eloop_unregister_event(void *event, size_t event_size)
 		return;
 
 	if (i != eloop.event_count - 1) {
-		memmove(&eloop.events[i], &eloop.events[i + 1],
-			(eloop.event_count - i - 1) *
-			sizeof(struct eloop_event));
+		os_memmove(&eloop.events[i], &eloop.events[i + 1],
+			   (eloop.event_count - i - 1) *
+			   sizeof(struct eloop_event));
 	}
 	eloop.event_count--;
 }
@@ -241,7 +239,7 @@ int eloop_register_timeout(unsigned int secs, unsigned int usecs,
 {
 	struct eloop_timeout *timeout, *tmp, *prev;
 
-	timeout = malloc(sizeof(*timeout));
+	timeout = os_malloc(sizeof(*timeout));
 	if (timeout == NULL)
 		return -1;
 	os_get_time(&timeout->time);
@@ -302,7 +300,7 @@ int eloop_cancel_timeout(eloop_timeout_handler handler,
 				eloop.timeout = next;
 			else
 				prev->next = next;
-			free(timeout);
+			os_free(timeout);
 			removed++;
 		} else
 			prev = timeout;
@@ -366,10 +364,9 @@ int eloop_register_signal(int sig, eloop_signal_handler handler,
 {
 	struct eloop_signal *tmp;
 
-	tmp = (struct eloop_signal *)
-		realloc(eloop.signals,
-			(eloop.signal_count + 1) *
-			sizeof(struct eloop_signal));
+	tmp = os_realloc(eloop.signals,
+			 (eloop.signal_count + 1) *
+			 sizeof(struct eloop_signal));
 	if (tmp == NULL)
 		return -1;
 
@@ -477,8 +474,13 @@ void eloop_run(void)
 			       (int) count, MAXIMUM_WAIT_OBJECTS);
 			count = MAXIMUM_WAIT_OBJECTS;
 		}
+#ifdef _WIN32_WCE
+		ret = WaitForMultipleObjects(count, eloop.handles, FALSE,
+					     timeout);
+#else /* _WIN32_WCE */
 		ret = WaitForMultipleObjectsEx(count, eloop.handles, FALSE,
 					       timeout, TRUE);
+#endif /* _WIN32_WCE */
 		err = GetLastError();
 
 		eloop_process_pending_signals();
@@ -493,7 +495,7 @@ void eloop_run(void)
 				eloop.timeout = eloop.timeout->next;
 				tmp->handler(tmp->eloop_data,
 					     tmp->user_data);
-				free(tmp);
+				os_free(tmp);
 			}
 
 		}
@@ -505,7 +507,12 @@ void eloop_run(void)
 			continue;
 		}
 
-		if (ret == WAIT_TIMEOUT || ret == WAIT_IO_COMPLETION)
+#ifndef _WIN32_WCE
+		if (ret == WAIT_IO_COMPLETION)
+			continue;
+#endif /* _WIN32_WCE */
+
+		if (ret == WAIT_TIMEOUT)
 			continue;
 
 		while (ret >= WAIT_OBJECT_0 &&
@@ -550,13 +557,13 @@ void eloop_destroy(void)
 	while (timeout != NULL) {
 		prev = timeout;
 		timeout = timeout->next;
-		free(prev);
+		os_free(prev);
 	}
-	free(eloop.readers);
-	free(eloop.signals);
+	os_free(eloop.readers);
+	os_free(eloop.signals);
 	if (eloop.term_event)
 		CloseHandle(eloop.term_event);
-	free(eloop.handles);
+	os_free(eloop.handles);
 	eloop.handles = NULL;
 }
 
