@@ -27,18 +27,23 @@
 #include <stdarg.h>
 #include <string.h>
 #ifndef _WIN32_WCE
+#ifndef CONFIG_TI_COMPILER
 #include <signal.h>
 #include <sys/types.h>
+#endif /* CONFIG_TI_COMPILER */
 #include <errno.h>
 #endif /* _WIN32_WCE */
 #include <ctype.h>
 #include <time.h>
 
+#ifndef CONFIG_TI_COMPILER
 #ifndef _MSC_VER
 #include <unistd.h>
 #endif /* _MSC_VER */
+#endif /* CONFIG_TI_COMPILER */
 
 #ifndef CONFIG_NATIVE_WINDOWS
+#ifndef CONFIG_TI_COMPILER
 #include <sys/socket.h>
 #include <netinet/in.h>
 #include <arpa/inet.h>
@@ -46,6 +51,7 @@
 #include <sys/uio.h>
 #include <sys/time.h>
 #endif /* __vxworks */
+#endif /* CONFIG_TI_COMPILER */
 #endif /* CONFIG_NATIVE_WINDOWS */
 
 #endif /* INCLUDES_H */
